[metadata]
name=hejmdal
author = Ask Neve Gamby
author_email = aknvg@space.dtu.dk
maintainer = Thom R. Edwards
maintainer_email = hardsnow@space.dtu.dk
version = attr: hejmdal.__version__

license = None

keywords = 
    magnetic field

[options]
packages = find:
install_requires = 
    pandas
    sqlalchemy
    pymysql
    requests

[options.packages.find]
exclude =
    tests
    docs